allow queries with filters to use fast-lane reducers